# prompts-volume

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLUSTERING_README.md  Dockerfile  README.md  docker-compose.yml  init-databases.sql  pyproject.toml  sd_mk723o7f1r4tq2robs.json
backend/: .env.example  CLAUDE.md  Dockerfile  README.md  evals_alembic.ini  pyproject.toml  users_alembic.ini
backend/alembic/: env.py
backend/alembic/evals/: alembic.ini  env.py
backend/alembic/evals/versions/: 001_initial_evals_schema.py  002_add_polling_indexes.py  002_replace_priority_queue_with_execution_queue.py  003_add_brightdata_batch_table.py  004_drop_execution_queue.py
backend/alembic/prompts/: alembic.ini  env.py
backend/alembic/users/: alembic.ini  env.py
backend/alembic/versions/: 001_initial_schema.py  002_remove_common_groups.py  003_add_billing_and_report_tables.py  4f7b27a2b1dd_add_brands_to_prompt_groups.py
backend/evals_alembic/versions/: 001_initial_evals_schema.py  002_add_polling_indexes.py
backend/samples/: moyo_ukr_keyword.json
backend/scripts/: download_model.py
backend/src/: main.py
backend/src/admin/: __init__.py  router.py
backend/src/admin/models/: __init__.py  (+1 more)
backend/src/auth/: __init__.py  crud.py  deps.py  models.py  router.py  security.py  verification.py
backend/src/billing/: __init__.py  exceptions.py  router.py
backend/src/brightdata/: __init__.py  deps.py  router.py
backend/src/config/: settings.py
backend/src/data/: prompts_laptops.csv  prompts_phones.csv
backend/src/database/: __init__.py  evals_models.py  evals_session.py  init.py  models.py  session.py  users_models.py  users_session.py
backend/src/email/: __init__.py
backend/src/embeddings/: clustering_service.py
backend/src/evaluations/: __init__.py  deps.py  router.py
backend/src/execution/: __init__.py  router.py
backend/src/prompt_groups/: __init__.py  exceptions.py  router.py
backend/src/prompts/: __init__.py  router.py
backend/src/reference/: __init__.py  router.py
backend/src/reports/: __init__.py  router.py
backend/src/utils/: keyword_filters.py  url_validator.py
backend/tests/: conftest.py  test_admin_billing.py  test_brand_mention_detector.py  test_citation_leaderboard_builder.py  test_database_integration.py  test_domain_mention_detector.py  test_enhanced_comparison.py  test_enriched_results.py  test_evaluation_poll.py  test_evaluation_results.py  test_password_change.py  test_prompt_groups.py  test_prompts_endpoint.py  test_report_json_export.py  test_reports_user_flow.py  test_signup_bonus_limit.py  test_similar_prompts.py
backend/users_alembic/: env.py
backend/users_alembic/versions/: 001_initial_users_schema.py
(+286 files in other folders)
