[project]
name = "prompts-volume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "openai>=2.7.1",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "uvicorn>=0.38.0",
]
