[project]
name = "prompts-volume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "openai>=2.7.1",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "uvicorn>=0.38.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
